<resources>
    <string name="app_name">RobotArm</string>
    <string name="hand">hand</string>
    <string name="wrist_up_down">wrist_up_down</string>
    <string name="wrist_rotation">wrist_rotation</string>
    <string name="elbow">elbow</string>
    <string name="shoulder">shoulder</string>
    <string name="base">base</string>
    <string name="device_disconnected">Device Disconnected</string>
    <string name="device_connected">Device Connected</string>
    <string name="connect_to_device">Connect To Device</string>
    <string name="disconnect">Disconnect</string>
    <string name="camera_feed">Camera Feed</string>
    <string name="distance">Distance</string>
    <string name="distance_value">Distance: %1$.2f cm</string>
    <string name="distance_value_na">Distance: N\A cm</string>

</resources>